[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemies/Multipliers.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 137.466

[sub_resource type="CircleShape2D" id=2]
radius = 154.897

[node name="Multipliers" type="KinematicBody2D" groups=[
"Enemies",
]]
position = Vector2( 0, -6.73477 )
collision_layer = 4
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -390.894, 66.9222 )
scale = Vector2( 0.945578, 1.16102 )
color = Color( 1, 0.337255, 0.0156863, 1 )
polygon = PoolVector2Array( 502.821, -167.381, 372.615, -178.605, 296.288, -162.891, 244.654, -84.3185, 242.409, -10.2361, 318.737, 54.8667, 433.228, 86.2957, 538.74, 43.6421, 572.413, -46.1548, 565.679, -131.462 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.24487, 4.48984 )
shape = SubResource( 1 )

[node name="hurt" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt"]
position = Vector2( -4.48981, 2.2449 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="spawn1" type="Position2D" parent="."]
position = Vector2( -89.7971, 40.4087 )

[node name="spawn2" type="Position2D" parent="."]
position = Vector2( 71.8374, 62.8579 )

[node name="spawn3" type="Position2D" parent="."]
position = Vector2( 33.6737, -85.3072 )

[connection signal="body_entered" from="hurt" to="." method="_on_hurt_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
